2015-09-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-search-article):
	Ensure that the article where the search word is found is displayed
	and pointed to in the summary buffer.

2015-08-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* tls.el (tls-format-message):
	Alias to format-message, or format if not available.
	(open-tls-stream): Use it.

2015-08-31  Paul Eggert  <eggert@cs.ucla.edu>

	* gnus-agent.el (gnus-agent-possibly-synchronize-flags-server):
	* gnus-art.el (gnus-article-browse-delete-temp-files):
	* gnus-eform.el (gnus-edit-form):
	* gnus-fun.el (gnus-display-x-face-in-from):
	* gnus-group.el (gnus-group-edit-group, gnus-group-nnimap-edit-acl):
	* gnus-topic.el (gnus-topic-edit-parameters):
	* mail-source.el (mail-source-delete-old-incoming):
	* message.el (message-strip-subject-encoded-words)
	(message-check-recipients, message-send-form-letter):
	* mm-decode.el (mm-display-part):
	* mm-uu.el (mm-uu-pgp-signed-extract-1):
	* mml-smime.el (mml-smime-get-dns-cert, mml-smime-get-ldap-cert):
	* spam-report.el (spam-report-process-queue):
	* tls.el (open-tls-stream):
	Respect ‘text-quoting-style’ in diagnostics.
	* gnus-art.el (article-display-face):
	* gnus-fun.el (gnus-display-x-face-in-from):
	Use straight quoting in email.
	* rfc2231.el (rfc2231-decode-encoded-string):
	Escape apostrophes in doc strings.

2015-08-26  Paul Eggert  <eggert@cs.ucla.edu>

	Go back to grave quoting in Gnus

	* auth-source.el (auth-source-netrc-parse-entries):
	* gnus-agent.el (gnus-agent-check-overview-buffer)
	(gnus-agent-fetch-headers):
	* gnus-int.el (gnus-start-news-server):
	* gnus-registry.el (gnus-registry--split-fancy-with-parent-internal)
	(gnus-registry-post-process-groups):
	* gnus-score.el (gnus-summary-increase-score):
	* gnus-start.el (gnus-convert-old-newsrc):
	* gnus-topic.el (gnus-topic-rename):
	* legacy-gnus-agent.el (gnus-agent-unlist-expire-days):
	* spam.el (spam-check-blackholes):